--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
 {
   "SERVER_ID": "747901083963097121",
   "SERVER_NAME": "Among Us",
-  "COOKIE": "s%3AQwo1QPKdTrNv6BV_8cXYvs_c9ePXSzLa.5Anz3c9r%2FOjnAGkGoN7aKfmYo9csbnfFwpQktAYx7nA"
+  "COOKIE": "( ENTER YOUR COOKIE HERE )"
 }
