--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
 {
   "SERVER_ID": "747901083963097121",
   "SERVER_NAME": "Among Us",
-  "COOKIE": "( ENTER YOUR COOKIE HERE )"
+  "COOKIE": " ENTER YOUR COOKIE HERE "
 }
